Version 0.2.0 [WIP]
-------------------------------------------------------------------------
*Add an AWS log file reader, read_aws, at Hadley's suggestion.

Version 0.1.0
-------------------------------------------------------------------------
*Initial release