@@ -6,8 +6,7 @@ using namespace Rcpp;
 List internal_split(std::list < std::vector < std::string > > requests, std::vector < std::string > names){
   int names_size = names.size();
   int in_size = requests.size();
-  IntegerVector rownames(in_size);
-  rownames = Rcpp::seq(1,in_size);
+  IntegerVector rownames = Rcpp::seq(1,in_size);
   List output;
    
   for(int i = 0; i < names_size; i++){
